fix: pagination small improvements

--- a/src/features/pagination/Pagination.scss
+++ b/src/features/pagination/Pagination.scss
@@ -2,6 +2,9 @@
   list-style: none;
   display: flex;
   flex-direction: row;
+  margin: 0;
+  padding: 0;
+  justify-content: center;
   li {
     margin: 10px;
     button {
